--- a/public/style.css
+++ b/public/style.css
@@ -875,12 +875,11 @@ ul {
     background-color: #eef2f6;
     border-top: 1px solid #d6dee7;
     border-bottom: 1px solid #d6dee7;
-    padding: 100px 0;
     min-height: 790px;
 }
 
 #site #main .recent-games .recent-box {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
     top: 0;
@@ -940,9 +939,10 @@ ul {
     background: #fff;
     border: 1px solid #d6dee7;
     border-radius: 2px;
-    margin-top: 20px;
+    margin-top: 28px;
     position: relative;
     min-height: 415px;
+    margin-bottom: 100px;
 }
 
 #site #main .recent-games .recent-box .new-recent-game .box .img,.img-racing,.open-img {
@@ -1057,6 +1057,31 @@ ul {
     align-items: center;
 }
 
+@media screen and (max-width: 992px){
+    #site #main .recent-games .recent-box .new-recent-game .box{
+        min-height: 442px;
+        margin-bottom: 10px;
+    }
+    #site #main .recent-games .recent-box .new-recent-game .box.box3{
+        margin-bottom: 90px;
+    }
+}
+@media screen and (max-width: 437px){
+    #site #main .recent-games .recent-box .title h2 {
+        font-size: 2rem;
+        line-height: 3rem;
+    }
+    #site #main .recent-games .recent-box .nav-recent-game ul li{
+        display: block;
+        margin-top: 20px;
+    }
+    #site #main .recent-games .recent-box .new-recent-game .box{
+        margin-top: 10px;
+    }
+    #site #main .recent-games .recent-box .nav-recent-game {
+        padding: 70px 0 10px;
+    }
+}
 /*end style for recent game*/
 
 
